--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,5 +25,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: lint with golangci-lint
         uses: golangci/golangci-lint-action@v2
+         with:
+          args: --timeout 5m0s
       - name: run go test
         run: go test ./...
